crates/mlcg_builtin_macros/tests/ui/fail_empty_emit.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/empty_emit_manifest.toml");
}

fn main() {}
